--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ enum34==1.1.6
 Flask==0.12.2
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
+geopy==1.11.0
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
+nltk==3.2.5
+numpy==1.13.3
 python-dateutil==2.6.1
 python-editor==1.0.3
 pytz==2017.2
 six==1.11.0
 SQLAlchemy==1.1.14
+textblob==0.13.0
 virtualenv==15.0.3
 Werkzeug==0.12.2
